[package]
name = "markov-bot"
version = "0.1.0"
authors = ["Ahmed Mohamed <ahmed02mohamed@outlook.com>", "Ammon Smith <ammon.i.smith@gmail.com>"]

[dependencies]
rand = "0.3"
typemap = "0.3"
regex = "0.2"
lazy_static = "0.2"
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.serenity]
git = "https://github.com/zeyla/serenity.git"
features = ["framework"]
